clang/test/BSC/Positive/SafeZone/spatial_check_user_mode/spatial_check_user_mode.cbs
// RUN: %clang -spatial-check=user %s -o %t.output
// RUN: %t.output
// RUN: %clang -rewrite-bsc -spatial-check=user %s -o %t-rw.c
// RUN: %clang %t-rw.c -o %t-rw.output
// RUN: %t-rw.output
// expected-no-diagnostics

typedef struct {
  int a;
  int b;
} S1;

typedef struct {
  int *_Owned p;
  int *_Borrow q;
} S2;

_Safe void consume(void *_Owned p) {
  void *q = _Unsafe(__move_to_raw(p));
}

// Test safe pointers is allowed to subscript in unsafe zone
void test1(int *_Borrow p1, int **_Borrow p2, int *_Borrow *p3,
           int *_Owned q1, int *_Owned * q2, int **_Owned q3) {
  p1[1] = 2;
  p2[1][2] = 3;
  p3[1][2] = 2;

  q1[2] = 3;
  q2[2] = nullptr;
  q2[1][2] = 4;
  q3[1][2] = 3;
  q3[2] = nullptr;
  consume((void *_Owned)q1);
  consume((void *_Owned)q3);
}

// Test safe pointers is allowed to subscript in safe zone
_Safe void test2(int *_Borrow p1, int **_Borrow p2,
                 int *_Owned q1, int **_Owned q2, int **_Owned q3) {
  p1[1] = 2;
  p2[1] = nullptr;

  q1[3] = 3;
  q2[3] = nullptr;
  q3[1] = nullptr;
  consume((void *_Owned)q1);
  consume((void *_Owned)q2);
  consume((void *_Owned)q3);
}

// Test subscript of safe pointers is allowed in nested safe/unsafe contexts
void test3(int *_Borrow p1, int **_Borrow p2, int *_Borrow *p3,
           int *_Owned q1, int *_Owned * q2, int **_Owned q3) {
  _Unsafe {
    _Safe {
      p1[1] = 2;
    }
    p2[1][2] = 3;
    p3[1][2] = 2;
  }

  _Unsafe {
    q1[2] = 3;
    q2[1] = nullptr;
    q2[1][2] = 4;
    _Safe {
      q3[2] = nullptr;
    }
  }
  consume((void *_Owned)q1);
  consume((void *_Owned)q3);
}

// Test safe pointers of record type
_Safe void test4(S1 *_Borrow p1, S1 **_Borrow p2, S1 *_Borrow *p3,
                 S1 *_Owned q1, S1 *_Owned * q2, S1 **_Owned q3) {
  p1[1] = (S1) {};
  p1[1].a = 5;
  _Unsafe {
    p2[1][2] = (S1) {};
    p2[1][2].a = 2;
    p3[1][2] = (S1) {};
    p3[1][2].b = 3;
  }

  q1[2].a = 2;
  _Unsafe {
    q2[1][2] = (S1) {};
    q2[2] = nullptr;
    q2[1][2].b = 3;
    q3[1][2] = (S1) {};
    q3[2][3].a = 2;
  }
  q3[2] = nullptr;
  consume((void *_Owned)q1);
  consume((void *_Owned)q3);
}

// Test safe pointers in struct fields
_Safe void test5(S2 s2) {
  s2.p[2] = 2;
  consume((void *_Owned)s2.p);
}

int main(void) {
  return 0;
}
