clang/test/BSC/Negative/Ownership/Owned/hasOwnedFields/hasOwnedFields.cbs
// RUN: %clang_cc1 -ast-dump -verify %s
// expected-no-diagnostics

// check if hasOwnedFields() can properly deal with the following cases:
// 1. A struct contains itself
// 2. Two struct contains each other
typedef struct node {
	struct node * next;
} Node;

Node node1;

struct A {
  struct B* b;
};

struct B {
  struct A* a;
};

struct A a;

// 3. C-style cast between raw pointers to different struct types
//    where one struct has _Owned member fields should be allowed.
struct S1 {
  int v;
};

struct S2 {
  int v;
  void * _Owned _Nullable p;
};

_Safe struct S2* _Owned foo(struct S1* _Owned ptr) {
  _Unsafe {
    struct S1 * p1 = __move_to_raw(ptr);
    struct S2 * p2 = (struct S2*)p1;
    return __take_from_raw(p2);
  }
}

